# rust-monorepo

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  rust-toolchain.toml
ferraris_calibration/: Cargo.toml  README.md
ferraris_calibration/calibration_data/: gyro_x.csv  gyro_y.csv  gyro_z.csv  x_minus.csv  x_plus.csv  y_minus.csv  y_plus.csv  z_minus.csv  z_plus.csv
ferraris_calibration/src/: calibration_info.rs  calibrator.rs  calibrator_inner.rs  ferraris_calibration.rs  imu_reading.rs  interactive_calibrator.rs  lib.rs  signal_regions.rs
firmware-common/: .gitignore  Cargo.toml  README.md  firmware-common  test.py
firmware-common/src/: allocator.rs  flash.rs  fmt.rs  lib.rs  storage.rs  utils.rs  vl_main.rs
firmware-common/src/avionics/: arming_state.rs  avionics_state.rs  avionics_storage.rs  backup_backup_flight_core.rs  backup_flight_core.rs  baro_reading_filter.rs  fallback_flight_core.rs  flight_core.rs  flight_core_event.rs  flight_core_event_channel.rs  flight_profile.rs  imu_calibration_info.rs  mod.rs  self_test.rs  up_right_vector_file.rs  vertical_speed_filter.rs
firmware-common/src/beacon/: beacon_data.rs  beacon_receiver.rs  beacon_sender.rs  mod.rs
firmware-common/src/common/: buffer.rs  buzzer_queue.rs  config_file.rs  config_structs.rs  debounced_signal.rs  debug2defmt_wrapper.rs  delta_factory.rs  delta_logger.rs  device_config.rs  device_manager.rs  device_mode.rs  embedded_error_wrapper.rs  fair_mutex.rs  file_types.rs  files.rs  fixed_point.rs  fixed_point2.rs  flash.rs  get_storage.rs  gps_parser.rs  imu_calibration_file.rs  indicator_controller.rs  io_traits.rs  mod.rs  moving_average.rs  multi_waker.rs  pyro_macro.rs  radio_kind_wrapper.rs  rkyv_structs.rs  rpc_channel.rs  rwlock.rs  sensor_reading.rs  sensor_snapshot.rs  serialized_enum.rs  serialized_logger.rs  storage_meta.rs  test_utils.rs  ticker.rs  unix_clock.rs  utc_clock.rs  (+5 more)
firmware-common/src/common/can_bus/: id.rs  message.rs  messages.rs  mod.rs  node_types.rs  packet.rs
firmware-common/src/common/console/: common_rpc_trait.rs  console.rs  console_program.rs  console_program_dispatcher.rs  create_rpc.rs  mod.rs  rpc.rs  sg_rpc.rs  vl_rpc.rs
firmware-common/src/common/delta_logger/: bitslice_io.rs  bitslice_primitive.rs  bitslice_serialize.rs  bitvec_serialize_traits.rs  buffered_delta_logger.rs  buffered_logger.rs  buffered_tiered_ring_delta_logger.rs  delta_factory.rs  delta_logger.rs  delta_logger_trait.rs  merged_logger.rs  mod.rs  ring_delta_logger.rs  ring_file_writer.rs  (+1 more)
firmware-common/src/driver/: adc.rs  arming.rs  barometer.rs  bus_error.rs  buzzer.rs  camera.rs  can_bus.rs  clock.rs  crc.rs  debugger.rs  delay.rs  device_management.rs  dummy_radio_kind.rs  flash.rs  gps.rs  i2c.rs  imu.rs  indicator.rs  lora.rs  mag.rs  meg.rs  mod.rs  pyro.rs  radio.rs  rng.rs  serial.rs  sg_adc.rs  spawner.rs  spi.rs  sys_reset.rs  timer.rs  timestamp.rs  uart_gps.rs  usb.rs
firmware-common/src/gcm/: gcm_storage.rs  mod.rs
firmware-common/src/ground_test/: avionics.rs  gcm.rs  mod.rs
firmware-common/src/ground_test_avionics/: mod.rs
firmware-common/src/strain_gauges/: global_states.rs  high_prio.rs  low_prio.rs  mid_prio.rs  mod.rs
firmware-common/src/vacuum_test/: mod.rs
firmware-common/test-data/: 106.baro_tier_1.csv
launch-simulator/: Cargo.toml
launch-simulator/src/: avionics.rs  calibration_system.rs  ground_test.rs  keyframe.rs  launch.rs  main.rs  motor.rs  orientation_logger.rs  rocket.rs
launch-simulator/src/virt_drivers/: arming.rs  buzzer.rs  debugger.rs  mod.rs  pyro.rs  sensors.rs  serial.rs  timer.rs  vlp_phy.rs
nyoom/: Cargo.toml
nyoom/src/: lib.rs
nyoom/src/proto/: nyoom_v3.proto
tiny-nmea/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  nmea.txt
tiny-nmea/src/: common.rs  gll.rs  gsv.rs  lib.rs  message.rs
vl-cli/: .gitignore  Cargo.toml  README.md  plot-sg.sh
vl-cli/src/: device_config.rs  flight_profile.rs  list_files.rs  main.rs  pull_delta_logs.rs  pull_file.rs  pull_logs.rs  pull_vacuum_test.rs  reader.rs
vl-cli/test-configs/: avionics.json  flight-profile.json  gcm.json  vacuum-test.json
vl-host-lib/: Cargo.toml
vl-host-lib/src/: create_serial.rs  lib.rs
vl-host-lib/src/common/: list_files.rs  mod.rs  parse_delta_readings.rs  parse_serialized_enums.rs  probe_device_type.rs  pull_delta_readings.rs  pull_file.rs  pull_serialized_enums.rs  read_delta_readings.rs  readers.rs  sensor_reading_csv_writer.rs  unix_timestamp_lut.rs
vl-host-lib/src/ozys/: mod.rs  parse_sg_data.rs  pull_ozys_data.rs  pull_sg_data.rs  sg_data_csv_writer.rs
vl-host-lib/src/vl/: device_config.rs  flight_profile.rs  lora_key.rs  mod.rs  pull_flight_data.rs  pull_vacuum_test.rs
vl-simulink-bridge/: Cargo.toml
vl-simulink-bridge/src/: clock.rs  main.rs  virtual_sensors.rs  virtual_serial.rs
vl8-ctrl-protocol/: Cargo.toml
vl8-ctrl-protocol/src/: codec.rs  lib.rs  master.rs  master_drivers.rs  slave.rs  utils.rs
vlfs/: Cargo.toml  README.md  layout.drawio  test-coverage.sh
vlfs-host/: Cargo.toml  README.md  test-coverage.sh
vlfs-host/.cargo/: config.toml
vlfs-host/debug-flash-ui/src/: App.tsx  Flash.ts  index.css  useHandleWebsocket.ts
vlfs-host/src/: debug_flash.rs  file_flash.rs  lib.rs  memory_flash.rs
vlfs-host/src/tests/: functional.rs  harness.rs  mod.rs  utils.rs
vlfs/debug-flash-ui/: package.json
vlfs/debug-flash-ui/src/: App.tsx
vlfs/src/: fmt.rs  lib.rs
vlfs/src/driver/: async_erase_flash.rs  crc.rs  dummy_crc.rs  dummy_flash.rs  flash.rs  managed_erase_flash.rs  mod.rs  stat_flash.rs  timer.rs
vlfs/src/flash/: async_erase_flash.rs  dummy_flash.rs  file_flash.rs  flash_wrapper.rs  memory_flash.rs  mod.rs  stat_flash.rs
vlfs/src/fs/: allocation_table.rs  at_builder.rs  daemon.rs  error.rs  hamming.rs  init.rs  iter.rs  mod.rs  reader.rs  sector_management.rs  utils.rs  writer.rs
vlfs/src/tests/: concurrent_files_iter.rs  debug_flash.rs  functional.rs  harness.rs  mod.rs  utils.rs
vlfs/src/utils/: debug_bytes.rs  fair_mutex.rs  flash_io.rs  io_traits.rs  mod.rs  rwlock.rs  u8_crc.rs
(+113 files in other folders)
