[workspace]
members = [
    "tiny-nmea",
    "firmware-common",
    "nyoom",
    "vlfs",
    "ferraris-calibration",
    # "vl8-ctrl-protocol", 
    "vl-cli",
    "vl-simulink-bridge",
    # "launch-simulator",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
