[workspace]
members = [
    "tiny-nmea",
    "firmware-common",
    "nyoom",
    "vlfs",
    "ferraris-calibration",
    # "vl8-ctrl-protocol", 
    "vl-cli",
    # "vl-simulink-bridge", 
    "calculate-required-bits", 
    "vl-host-lib",
    # "launch-simulator",
    "ozys-app/src-tauri",
]
resolver = "2"

[profile.dev]
opt-level = 1

#[profile.dev.package."*"]
#opt-level = 3

[profile.release]
lto = true
codegen-units = 1
