[package]
name = "ferraris-calibration"
authors = ["Pegasis <me@pegasis.site>"]
version = "0.1.0"
edition = "2021"
keywords = ["imu", "sensor", "calibration", "ferraris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.7.5", default-features = false }
rkyv = { version = "0.7.39", default-features = false, features = [
    "size_32",
    "validation",
] }
nalgebra = { version = "0.32.2", default-features = false, features = ["libm"]}
micromath = { version = "2.0.0", default-features = false }
defmt = "0.3"

[dev-dependencies]
approx = "0.5.1"
csv = "1.2"