[package]
name = "ferraris-calibration"
authors = ["Pegasis <me@pegasis.site>"]
version = "0.1.0"
edition = "2021"
keywords = ["imu", "sensor", "calibration", "ferraris"]

[features]
rkyv-no-std  = ["rkyv/size_32"]
rkyv-validation = ["rkyv/validation"]
rkyv = ["rkyv-no-std", "rkyv-validation", "rkyv/std"]
defmt = ["dep:defmt"]

[dependencies]
heapless = { version = "0.7.5", default-features = false }
rkyv = { version = "0.7", default-features = false, optional = true }
nalgebra = { version = "0.32.2", default-features = false, features = ["libm"]}
defmt = { version = "0.3", optional = true }
libm = "0.2.6"
either = { version = "1.8.1", default-features = false }

[dev-dependencies]
approx = "0.5.1"
csv = "1.2"
