[package]
name = "firmware-common"
authors = ["Pegasis <me@pegasis.site>"]
version = "0.1.0"
edition = "2021"

[features]
defmt = ["vlfs/defmt"]
log = ["dep:log", "vlfs/log"]
std = []

[dependencies]
embassy-futures = "0.1.1"
embassy-sync = { version = "0.5.0", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
defmt = "0.3"
log = { version = "0.4", optional = true }
heapless = { version = "0.8.0", features = [
    "defmt-03",
], default-features = false }
rkyv = { version = "0.7.43", default-features = false, features = [
    "size_32",
    "validation",
] }
nalgebra = { version = "0.32.2", default-features = false }
ahrs = { version = "0.6.0", default-features = false, features = [
    "field_access",
] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
vlfs = { path = "../vlfs", default-features = false, features = ["ecc"] }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
micromath = { version = "2.0.0", features = [
    "statistics",
], default-features = false }
embedded-hal-async = "1.0.0"
nmea = { version = "0.6.0", default-features = false, features = [
    "GGA",
    "GLL",
    "GSA",
    "GSV",
    "RMC",
] }
ferraris-calibration = { path = "../ferraris-calibration", features = [
    "defmt",
    # "rkyv-no-std",
] }
bitflags = "2.2.1"
chrono = { version = "0.4.26", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
eskf = { git = "https://github.com/PegasisForever/eskf-rs.git", default-features = false }
libm = "0.2.7"
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
lora-phy = { git = "https://github.com/lora-rs/lora-rs", default-features = false }
lora-modulation = { git = "https://github.com/lora-rs/lora-rs", default-features = false }
paste = "1.0.15"
approx = { version = "0.5.1", default-features = false }
either = { version = "1.12.0", default-features = false }
crc = "3.2.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
cryptoxide = { version = "0.4.4", default-features = false, features = [
    "chacha",
] }
packed_struct = { version = "0.10.1", default-features = false }
calculate-required-bits = { path = "../calculate-required-bits" }
int-enum = "1.1.2"
reed-solomon = "0.2.1"
biquad = "0.4.2"
icao-isa = "0.1.2"
icao-units = "0.1.3"
cmsis_dsp = {git = "https://github.com/McMaster-Rocketry-Team/cmsis_dsp.rs.git"}
half = { version = "2.4.1", default-features = false }

[dev-dependencies]
firmware-common = { version = "*", path = ".", default-features = false, features = [
    "std",
    "log",
] }
futures-executor = { version = "0.3.17", features = ["thread-pool"] }
futures-test = "0.3.17"
futures-timer = "3.0.2"
futures-util = { version = "0.3.17", features = ["channel"] }
critical-section = { version = "1.1", features = ["std"] }
tokio = { version = "1.39.1", features = ["full"] }
rand = "0.8.5"
mockall = "0.13.0"
plotters = "0.3.6"
csv = "1.3.0"