[package]
name = "launch-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1" }
bevy_panorbit_camera = "0.5.1"
bevy_rapier3d = { git = "https://github.com/robertdodd/bevy_rapier.git", branch = "feature/add-rope-joint", features = [
    "debug-render-3d",
] }
firmware-common = { path = "../firmware-common", default-features = false, features = [
    "log",
    "clap",
] }
tokio = { version = "1.28.2", features = ["full"] }
vlfs = { path = "../vlfs" }
vlfs-host = { path = "../vlfs-host" }
critical-section = { version = "1.1", features = ["std"] }
rodio = "0.17.1"
nalgebra = "0.32.2"
bevy_egui = "0.20.3"
rand_distr = "0.4.3"
rand = "0.8.5"
embassy-sync = "0.2.0"
serde = "1.0.164"
csv = "1.2.2"
heapless = "0.7.16"
lora-phy = "1.2.0"
futures = "0.3.28"
clap = { version = "4.3.11", features = ["derive"] }
