[package]
name = "nyoom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = "0.6.0"
futures-test = { version = "0.3.28"}
prost = { version = "0.12.4", default-features = false, features = ["prost-derive"] }

[build-dependencies]
prost-build = { version = "0.12.4" }
