[package]
name = "vl-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
clap-num = "1.1.1"
defmt = "0.3"
directories = "5.0.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-serial = "5.4.4"
firmware-common = {path = "../firmware-common", default-features = false, features = ["log"]}
embedded-hal-async = "1.0.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vlfs = { path = "../vlfs", default-features = false }
vl-host-lib = { path = "../vl-host-lib" }
chrono = "0.4.38"
