[package]
name = "vl-host-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
defmt = "0.3.8"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
tokio = { version = "1.38.0", features = ["full"] }
firmware-common = {path = "../firmware-common", default-features = false, features = ["log"]}
vlfs = { path = "../vlfs", default-features = false }
embassy-sync = "0.6.0"
embedded-hal-async = "1.0.0"
env_logger = "0.11.3"
log = "0.4.21"
crc = "3.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
csv = "1.3.0"
either = "1.13.0"
map-range = "0.1.2"