[package]
name = "vl-simulink-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
firmware-common = { path = "../firmware-common", default-features = false, features = [
    "log",
] }
embedded-hal-async = "1.0.0"
rand = "0.8.5"
embassy-sync = { version = "0.6.0", features = ["std"] }
critical-section = { version = "1.1", features = ["std"] }
tokio = "1.38.0"
embedded-io-async = { version = "0.6.1", features = ["alloc", "std"] }
