[package]
name = "vl8-ctrl-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Pegasis <me@pegasis.site>"]

[dependencies]
rkyv = { version = "0.7.39", default-features = false, features = [
    "size_32",
    "validation",
] }
heapless = { version = "0.8.0", features = ["defmt-03"], default-features = false }
defmt = "0.3"
firmware-common = { path = "../firmware-common" }
embassy-sync = { version = "0.5.0", default-features = false }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
embedded-hal-async = "1.0.0"